<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonStop"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonStart" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/buttonStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/textViewTcpPort"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/tcp_port_to_listen"
                app:layout_constraintBottom_toBottomOf="@+id/editTextTcpPort"
                app:layout_constraintEnd_toStartOf="@+id/editTextTcpPort"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editTextTcpPort" />

            <EditText
                android:id="@+id/editTextTcpPort"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:inputType="number"
                android:maxLength="5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewTcpPort"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewBaudRate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/baud_rate"
                app:layout_constraintBottom_toBottomOf="@+id/editTextNumberBaudRate"
                app:layout_constraintEnd_toStartOf="@+id/editTextNumberBaudRate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editTextNumberBaudRate" />

            <EditText
                android:id="@+id/editTextNumberBaudRate"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:inputType="number"
                android:maxLength="6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewBaudRate"
                app:layout_constraintTop_toBottomOf="@+id/editTextTcpPort" />

            <TextView
                android:id="@+id/textViewDataBits"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/data_bits"
                app:layout_constraintBottom_toBottomOf="@+id/spinnerDataBits"
                app:layout_constraintEnd_toStartOf="@+id/spinnerDataBits"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/spinnerDataBits" />

            <Spinner
                android:id="@+id/spinnerDataBits"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="24dp"
                android:entries="@array/data_bits"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewDataBits"
                app:layout_constraintTop_toBottomOf="@+id/editTextNumberBaudRate" />

            <TextView
                android:id="@+id/textViewStopBits"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/stop_bits"
                app:layout_constraintBottom_toBottomOf="@+id/spinnerStopBits"
                app:layout_constraintEnd_toStartOf="@+id/spinnerStopBits"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/spinnerStopBits" />

            <Spinner
                android:id="@+id/spinnerStopBits"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="24dp"
                android:entries="@array/stop_bits"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewStopBits"
                app:layout_constraintTop_toBottomOf="@+id/spinnerDataBits" />

            <TextView
                android:id="@+id/textViewParity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/parity"
                app:layout_constraintBottom_toBottomOf="@+id/spinnerParity"
                app:layout_constraintEnd_toStartOf="@+id/spinnerParity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/spinnerParity" />

            <Spinner
                android:id="@+id/spinnerParity"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="24dp"
                android:entries="@array/parity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewParity"
                app:layout_constraintTop_toBottomOf="@+id/spinnerStopBits" />

            <TextView
                android:id="@+id/textNoLocalEcho"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/no_local_echo"
                app:layout_constraintBottom_toBottomOf="@+id/switchNoLocalEcho"
                app:layout_constraintEnd_toStartOf="@+id/switchNoLocalEcho"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/switchNoLocalEcho" />

            <Switch
                android:id="@+id/switchNoLocalEcho"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textNoLocalEcho"
                app:layout_constraintTop_toBottomOf="@+id/spinnerParity" />

            <TextView
                android:id="@+id/textRemoveLf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/remove_lf"
                app:layout_constraintBottom_toBottomOf="@+id/switchRemoveLf"
                app:layout_constraintEnd_toStartOf="@+id/switchRemoveLf"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/switchRemoveLf" />

            <Switch
                android:id="@+id/switchRemoveLf"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textRemoveLf"
                app:layout_constraintTop_toBottomOf="@+id/switchNoLocalEcho" />

            <TextView
                android:id="@+id/textAutostart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/autostart_on_device_connect"
                app:layout_constraintBottom_toBottomOf="@+id/spinnerAutostart"
                app:layout_constraintEnd_toStartOf="@+id/spinnerAutostart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/spinnerAutostart" />

            <Spinner
                android:id="@+id/spinnerAutostart"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="24dp"
                android:entries="@array/autostart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textAutostart"
                app:layout_constraintTop_toBottomOf="@+id/switchRemoveLf" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>